--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="hero">
       <img src="./assets/hero.jpg" alt="Hero Image" />
     </div>
+    <h2>Kantapon(Kan/กัน)</h2>
     <!-- Main Section with Cards -->
     <div class="main">
       <div class="aside">
